# drawthings-grpc-hermes-plugin

./: .gitignore  README.md  __init__.py  client.py  defaults.json  plugin.yaml  pyproject.toml  schemas.py  tools.py
skills/drawthings-grpc/: SKILL.md
tests/: test_aliases.py  test_registration.py
